--- a/HRMS/package.json
+++ b/HRMS/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.2.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
