--- a/HRMS/package.json
+++ b/HRMS/package.json
@@ -26,10 +26,12 @@
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "bootstrap4-toggle": "^3.6.1",
     "ngx-toastr": "^14.2.2",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "spinners-angular": "^0.0.5",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
