--- a/HRMS/package.json
+++ b/HRMS/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "bootstrap4-toggle": "^3.6.1",
+    "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^14.2.2",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
