--- a/practice project/product-practice-project/package.json
+++ b/practice project/product-practice-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firebase-practice",
+  "name": "product-practice-project",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,19 +19,20 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "@types/uuid": "^8.3.4",
     "bootstrap": "^5.1.3",
+    "ngx-image-compress": "^13.1.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.2",
+    "@angular-devkit/build-angular": "~13.3.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.4",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
