--- a/HRMS/angular.json
+++ b/HRMS/angular.json
@@ -30,8 +30,7 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap4-toggle/css/bootstrap4-toggle.min.css",
-              "node_modules/ngx-toastr/toastr.css",
-              "node_modules/sweetalert2/src/sweetalert2.scss"
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
