--- a/HRMS/package.json
+++ b/HRMS/package.json
@@ -32,7 +32,7 @@
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "spinners-angular": "^0.0.5",
-    "sweetalert2": "^11.4.8",
+    "sweetalert": "^2.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
