--- a/HRMS/package.json
+++ b/HRMS/package.json
@@ -27,9 +27,12 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "bootstrap4-toggle": "^3.6.1",
+    "jquery": "^3.6.0",
+    "jquery.js": "^0.0.2-security",
     "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^14.2.2",
     "ngx-ui-loader": "^13.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "spinners-angular": "^0.0.5",
     "sweetalert": "^2.1.2",
